ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: geekbrains
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: <CHANGE ME>

    
          
            
    

          
          Expand Down
    
    
  
    http:
      paths:
      - path: "/users"
        pathType: Prefix
        backend:
          service:
            name: geekbrains
            port:
              number: 8000
